--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
 language: c
 matrix:
   include:
+  - os: osx
+    env:
+        NWCHEM_TARGET=MACX64
+        PATH=/usr/local/opt/open-mpi/bin/:$PATH
+        DYLD_LIBRARY_PATH=$TRAVIS_BUILD_DIR/lib:$DYLD_LIBRARY_PATH
   - os: linux
     dist: trusty
     sudo: required
+    env:
+        NWCHEM_TARGET=LINUX64
+        LD_LIBRARY_PATH=$TRAVIS_BUILD_DIR/lib:$LD_LIBRARY_PATH
 compiler:
   - gcc
 git:
   depth: 3
 env: == default ==
         NWCHEM_TOP=$TRAVIS_BUILD_DIR
-        NWCHEM_TARGET=LINUX64
-        NWCHEM_MODULES="qmandpw python"
+        NWCHEM_MODULES="qmandpw"
         USE_MPI=y
         USE_64TO32=y
         BLASOPT="-L$TRAVIS_BUILD_DIR/lib -lopenblas -lpthread -lrt"
@@ -21,11 +28,11 @@ env: == default ==
         USE_PYTHONCONFIG=y
         PYTHONVERSION=2.7
         PYTHONHOME=/usr
-        LD_LIBRARY_PATH=$TRAVIS_BUILD_DIR/lib:$LD_LIBRARY_PATH
 before_script:
         - printenv TRAVIS_BUILD_DIR
         - printenv NWCHEM_TOP
-        - sudo apt-get -y install gfortran gcc python-dev  cmake libopenmpi-dev openmpi-bin tcsh make  perl
+         if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc open-mpi python2.7 cmake || true; fi
+         if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -y install gfortran gcc python-dev  cmake libopenmpi-dev openmpi-bin tcsh make  perl || true;fi
         - ls -lrt $TRAVIS_BUILD_DIR
         - ls -lrt $NWCHEM_TOP
         - cd $NWCHEM_TOP/src && make nwchem_config &&  make 64_to_32 >& 6log &
