--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,10 @@ git:
   depth: 3
 before_script:
         - printenv TRAVIS_BUILD_DIR
-        - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc open-mpi python2.7 cmake || true; fi
-        - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -y install gfortran gcc python-dev  cmake libopenmpi-dev openmpi-bin tcsh make  perl || true;fi
         - ls -lrt $TRAVIS_BUILD_DIR
+        - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc open-mpi python cmake ; fi
+        - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -y install gfortran gcc python-dev  cmake libopenmpi-dev openmpi-bin tcsh make  perl ;fi
+        - gfortran -v
         - ./travis/config_nwchem.sh
         - ./travis/build_openblas.sh
         - ./travis/build_scalapack.sh
