--- a/.travis.yml
+++ b/.travis.yml
@@ -50,8 +50,7 @@ script:
         - cd $NWCHEM_TOP/src/tce && ../../travis/sleep_loop.sh make FDEBUG="-O0 -g" FOPTIMIZE="-O0 -g" -j4
         - tail -4 $NWCHEM_TOP/src/make.log
         - cd $NWCHEM_TOP/src && make link
-        - cd $NWCHEM_TOP/QA && ./runtests.mpi.unix procs 2 dft_siosi3
-        - cd $NWCHEM_TOP/QA && ./doafewqmtests.mpi 2
+        - cd $NWCHEM_TOP/QA && ./runtests.mpi.unix procs 2 dft_siosi3  h2o_opt dft_he2+ cosmo_h2o_dft tddft_h2o h2o2-response
 after_failure:
         - tail -20 $NWCHEM_TOP/src/tools/build/config.log
         - tail -10 $NWCHEM_TOP/src/tools/build/comex/config.log
