--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
         - printenv TRAVIS_BUILD_DIR
         - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew cask uninstall oclint || true  ; fi
         - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc open-mpi scalapack openblas || true  ; fi
-        - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -y install gfortran gcc python-dev  cmake libopenmpi-dev openmpi-bin tcsh make  perl ;fi
+        - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -y install gfortran gcc python-dev  cmake libopenmpi-dev openmpi-bin tcsh make perl subversion ;fi
         - gfortran -v
         - mpif90 -show
         - ./travis/config_nwchem.sh
