--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,14 @@
 language: c
 os: 
  - osx
-    env:
-        NWCHEM_TARGET=MACX64
-        PATH=/usr/local/opt/open-mpi/bin/:$PATH
-        DYLD_LIBRARY_PATH=$TRAVIS_BUILD_DIR/lib:$DYLD_LIBRARY_PATH
+    env: NWCHEM_TARGET=MACX64 PATH=/usr/local/opt/open-mpi/bin/:$PATH DYLD_LIBRARY_PATH=$TRAVIS_BUILD_DIR/lib:$DYLD_LIBRARY_PATH
   - linux
     dist: trusty
     sudo: required
-    env:
-        NWCHEM_TARGET=LINUX64
-        LD_LIBRARY_PATH=$TRAVIS_BUILD_DIR/lib:$LD_LIBRARY_PATH
+    env: NWCHEM_TARGET=LINUX64 LD_LIBRARY_PATH=$TRAVIS_BUILD_DIR/lib:$LD_LIBRARY_PATH
  env: 
   - NWCHEM_MODULES=qmandpw
-  -  NWCHEM_MODULES=tce
+  - NWCHEM_MODULES=tce
 compiler:
   - gcc
 git:
