--- a/.travis.yml
+++ b/.travis.yml
@@ -39,5 +39,5 @@ after_failure:
         - grep -i tce_energy $TRAVIS_BUILD_DIR/src/6log
         - grep d= $TRAVIS_BUILD_DIR/QA/testoutputs/dft_he2+.out
         - grep @ $TRAVIS_BUILD_DIR/QA/testoutputs/h2o_opt.out
-        - cat d= $TRAVIS_BUILD_DIR/QA/testoutputs/dft_he2+.out
+        - cat $TRAVIS_BUILD_DIR/QA/testoutputs/dft_he2+.out
               
