build openblas on mac, too

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_script:
         - gfortran -v
         - mpif90 -show
         - ./travis/config_nwchem.sh
-        - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./travis/build_openblas.sh ; fi
+        - ./travis/build_openblas.sh
         - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./travis/build_scalapack.sh ; fi
         - sleep 1
 script:
