HvD: Adding "final" implementations for the 2-electron terms.

--- a/src/rdmft/GNUmakefile
+++ b/src/rdmft/GNUmakefile
@@ -14,7 +14,8 @@
          wfn1_dnrm2.o \
          wfn1_entropy.o \
          wfn1_e_g.o \
-         wfn1_e_g_2el.o \
+         wfn1_e_g_2el_mx.o \
+         wfn1_e_g_2el_vx.o \
          wfn1_e_g_2el_hf.o \
          wfn1_e_g_2el_s.o \
          wfn1_exp.o \
