...more vdw...EJB

--- a/src/nwpw/pspw/lib/exchange-correlation/vdw-DF/GNUmakefile
+++ b/src/nwpw/pspw/lib/exchange-correlation/vdw-DF/GNUmakefile
@@ -3,7 +3,9 @@
 #
 
  OBJ_OPTIMIZE = \
-            	vdw-DF.o
+            	vdw-DF.o \
+            	vdw_DF_kernel.o \
+		vdw_DF_get_qmesh_filename.o
 #            vdirac.o \
 
 	  OBJ = 
