screening for Simint interface

--- a/src/NWints/simint/source/GNUmakefile
+++ b/src/NWints/simint/source/GNUmakefile
@@ -26,6 +26,7 @@ endif
      USES_BLAS = 
 
 include ../../../config/makelib.h
+$(LIBRARY_PATH)(nwcsim_hf2.o):	../module/nwcsim_shell.mod
 
 #  ifeq ($(FC),efc)
 #            FOPTIONS += -save
