--- a/src/util/GNUmakefile
+++ b/src/util/GNUmakefile
@@ -104,12 +104,10 @@ ifdef NO_MPIF
   LIB_DEFINES += -DNO_MPIF
 endif
 
-ifeq ($(TARGET),$(findstring $(TARGET),BGL BGP BGQ LINUX CYGWIN CYGWIN64 CYGNUS INTERIX LINUX64 MACX MACX64))
+ifeq ($(TARGET),$(findstring $(TARGET),BGL BGP BGQ LINUX CYGWIN CYGWIN64 CYGNUS LINUX64 MACX MACX64))
   EXTRA_OBJ = linux_cpu.o linux_shift.o linux_random.o  erfc.o linux_printaff.o
   ifeq ($(LINUXCPU),x86)
-    ifneq ($(TARGET),INTERIX)
-      EXTRA_OBJ += linux_setfpucw.o
-    endif
+    EXTRA_OBJ += linux_setfpucw.o
   endif
   LIB_DEFINES += -DBYTE_SHORT_PACKING  
   ifeq ($(FC),ifc)
@@ -253,9 +251,6 @@ ifdef SPEECH
    OBJ += udp.o
 endif
 
-ifeq ($(TARGET),INTERIX)
-DEFINES += -DNOSOCKLEN
-endif
 ifeq ($(TARGET),LINUX)
 DEFINES += -DNEED_LOC
 endif
