convert TCE cuda codes to hip codes which can run on AMD GPUs
TCE cuda codes(memory.cu and sd_t_total.cu) are converted to hip codes
(memory.hip.cpp and sd_t_total.hip.cpp) which can run on AMD GPUs.
Related source codes and makefiles are also modified to compile on AMD GPUs.
These codes have successfully run on ROCm2.0

--- a/src/tce/GNUmakefile
+++ b/src/tce/GNUmakefile
@@ -162,6 +162,11 @@ ifdef TCE_CUDA
         SUBDIRS += ttlg
       endif
 endif
+
+ifdef TCE_HIP
+      LIB_DEFINES += -DTCE_HIP
+endif
+
 ifdef USE_PSTAT
       LIB_DEFINES += -DUSE_PSTAT
 endif
