HvD: Refactoring the code moving the linesearch based solver into a function of its own.

--- a/src/rdmft/GNUmakefile
+++ b/src/rdmft/GNUmakefile
@@ -43,6 +43,7 @@
          wfn1_print_occ.o \
          wfn1_size.o \
          wfn1_skew.o \
+         wfn1_solve_line.o \
          wfn1_test_rdms.o \
 	 wfn1_trace.o \
          wfn1_write_movecs.o \
