Introduced Fortran90 subroutine interfaces required by use of OPTIONAL fortran90 attribute. See issue https://github.com/nwchemgit/nwchem/issues/97

--- a/src/ccsd/GNUmakefile
+++ b/src/ccsd/GNUmakefile
@@ -114,6 +114,8 @@ ifeq ($(ARMCI_NETWORK),MPI-PR)
    LIB_DEFINES += -DACC_STRIPS
 endif
 
+   LIB_DEFINES +=-DUSE_F90INTERFACE
+
  LIBRARY = libccsd.a
 
 include ../config/makelib.h
