--- a/src/ccsd/GNUmakefile
+++ b/src/ccsd/GNUmakefile
@@ -104,7 +104,7 @@ endif
 ifeq ($(_FC),xlf)
   LIB_DEFINES += -DTRPMIXP_OFF
 endif
-HAVE_SET_GA_PROPERTY = $(shell cat ${NWCHEM_TOP}/src/tools/build/global/src/ga-wapi.h | awk ' /wnga_set_property/ {print "Y"}')
+HAVE_SET_GA_PROPERTY_DISABLES = $(shell cat ${NWCHEM_TOP}/src/tools/build/global/src/ga-wapi.h | awk ' /wnga_set_property/ {print "Y"}')
 ifeq ($(HAVE_SET_GA_PROPERTY),Y)
       LIB_DEFINES += -DHAVE_SET_GA_PROPERTY
 endif
