adding correction strategy in BAND for edge case in fractional orbital optimization...EJB

--- a/src/nwpw/band/lib/psi/GNUmakefile
+++ b/src/nwpw/band/lib/psi/GNUmakefile
@@ -12,6 +12,8 @@
 			c_check.o \
 			cpsi_read.o \
 			cpsi_write.o \
+			crho_read.o \
+			crho_write.o \
 			cpsi_new.o \
 			v_cpsi_new.o \
 			v_cpsi_read.o \
