--- a/src/property/GNUmakefile
+++ b/src/property/GNUmakefile
@@ -64,7 +64,7 @@
          CalcPerturbedTDPmat1_opt.o \
          localization_driver.o \
          hnd_vec_write.o \
-      	 giao_b1_movecs_tools.o \
+	 giao_b1_movecs_tools.o \
          aor_r1_beta_anl_tools.o\
 	 task_raman.o \
 	 raman_input.o \
@@ -72,7 +72,7 @@
          waimfile.o \
          hnd_eldmap_grid.o \
          prop_moldenfile.o \
-	 prop_grid.o
+	 prop_grid.o prop_polfromsos.o
 
 #   OBJ = aoresponse_giao_rhs.o
 
