USE_FPICF=1 is a workaround for ubuntu 18.04 autconf failure

--- a/src/tools/GNUmakefile
+++ b/src/tools/GNUmakefile
@@ -548,6 +548,9 @@ endif
 #detect clang
 GOTCLANG= $(shell $(CC) -dM -E - </dev/null 2> /dev/null |grep __clang__|head -1|cut -c19)
 GOTFREEBSD= $(shell uname -o 2>&1|awk ' /FreeBSD/ {print "1";exit}')
+ifdef USE_FPICF
+  FFLAGS_FORGA += "-fPIC"
+endif
 ifeq ($(GOTCLANG),1)
   CFLAGS_FORGA += "-fPIC"
   ifeq ($(TARGET),MACX64)
