--- a/src/driver/GNUmakefile
+++ b/src/driver/GNUmakefile
@@ -6,7 +6,7 @@ LIBRARY = libdriver.a
 
 OBJ_OPTIMIZE = driver_input.o 
 
-OBJ =       opt_drv.o oniom.o lbfgs.o lbfgs-b.o lbfgs-b_driver.o lbfgs_driver.o lbfgs_utils.o
+OBJ =       opt_drv.o oniom.o lbfgs.o lbfgs-b.o lbfgs-b_driver.o lbfgs_driver.o lbfgs_utils.o socket_driver.o
 
 USES_BLAS = opt_drv.F oniom.F lbfgs.F lbfgs-b.F lbfgs-b_driver.F
 
