--- a/src/NWints/simint/libsimint_source/GNUmakefile
+++ b/src/NWints/simint/libsimint_source/GNUmakefile
@@ -5,7 +5,8 @@ include ../../../config/makefile.h
 simint_install:
 	./build_simint.sh 
 
-LIB_TARGETS += simint_install simint-chem-simint-generator.tar.gz
+LIB_TARGETS += simint_install simint-chem-simint-generator.tar.gz simint.l* *-simint-generator-???????
+  MAKEFLAGS = -j 2 --no-print-directory
 
 
 include ../../../config/makelib.h
