--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ variables:
   
 build-all:
   stage: build
+  tags:
+    - ubuntu_bionic
   script:
     - pwd
     - cd $CI_PATH/src
@@ -25,6 +27,8 @@ build-all:
 
 run-qas:
   stage: test
+  tags:
+    - ubuntu_bionic
   script:
     - cd $CI_PATH/QA
     - ./doafewqmtests.mpi procs 2
