--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,14 +12,15 @@ variables:
   BLAS_SIZE: 4
   SCALAPACK_LIB: "-lscalapack-openmpi  -lopenblas"
   SCALAPACK_SIZE: 4
-  
+
 build-all:
   stage: build
   tags:
     - ubuntu_bionic
   script:
     - pwd
-    - cd $CI_PATH/src
+    - env |grep CI_
+    - cd $CI_PROJECT_DIR/src
     - pwd
     - make nwchem_config
     - make 64_to_32
@@ -30,5 +31,5 @@ run-qas:
   tags:
     - ubuntu_bionic
   script:
-    - cd $CI_PATH/QA
+    - cd $CI_PROJECT_DIR/QA
     - ./doafewqmtests.mpi procs 2
